--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="conteiner">
           <h2 class="business-title">Чем мы занимаемся</h2>
           <ul class="list">
-            <li>
+            <li class="business-list-item">
               <img class="img-no-gap"
                 src="./images/box1.jpg"
                 alt="человек набирает код согласно нарисованого алгоритма"
@@ -88,7 +88,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="business-list-item">
               <img class="img-no-gap"
                 src="./images/box2.jpg"
                 alt="человек выбирает варианты макетов сайта для мобильных устройств"
@@ -96,7 +96,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="business-list-item">
               <img class="img-no-gap"
                 src="./images/box3.jpg"
                 alt="человек с помощью планшета подбирает палитру цветов"
